--- a/libs/board/src/lib/board/board.component.scss
+++ b/libs/board/src/lib/board/board.component.scss
@@ -8,4 +8,11 @@
   height: min(90vw, 500px);
   border: 3px solid #000;
   box-shadow: 0 4px 24px rgba(0, 0, 0, 0.12);
+
+  @media (max-width: 680px) {
+    padding: 0;
+    box-sizing: border-box;
+    margin: 0 auto;
+    margin-bottom: 16px;
+  }
 }
