--- a/libs/board/src/lib/cell/cell.component.scss
+++ b/libs/board/src/lib/cell/cell.component.scss
@@ -4,25 +4,27 @@
   border-right: 1px solid #bbb;
   border-bottom: 1px solid #bbb;
 
-  // Thick right border after every 3rd column
   &:nth-child(3n) {
     border-right: 3px solid black;
   }
 
-  // Thick bottom border after every 3rd row (rows 3 and 6 = nth-child 19-27 and 46-54)
   &:nth-child(n + 19):nth-child(-n + 27),
   &:nth-child(n + 46):nth-child(-n + 54) {
     border-bottom: 3px solid black;
   }
 
-  // Row 3 bottom border (cells 19-27)
-  &:nth-child(n + 19):nth-child(-n + 27) {
-    border-bottom: 3px solid black;
-  }
+  @media (max-width: 680px) {
+    min-width: 0;
+    min-height: 0;
+    aspect-ratio: unset;
 
-  // Row 6 bottom border (cells 46-54)
-  &:nth-child(n + 46):nth-child(-n + 54) {
-    border-bottom: 3px solid black;
+    &:nth-child(9n) {
+      border-right: none;
+    }
+
+    &:nth-child(n + 73) {
+      border-bottom: none;
+    }
   }
 }
 
@@ -32,7 +34,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: clamp(16px, 3vw, 28px);
+  font-size: clamp(16px, 2.5cqi, 24px);
   font-weight: 400;
   cursor: pointer;
   background: white;
