fix: lint fixes

--- a/apps/sudoku/src/app/game/game.component.html
+++ b/apps/sudoku/src/app/game/game.component.html
@@ -18,7 +18,7 @@
       <mat-spinner diameter="60" />
     </div>
     } @else {
-    <app-board
+    <lib-board
       [board]="gameState.board()"
       [initialBoard]="gameState.initialBoard()"
       [isInvalid]="gameState.gameStatus() === 'invalid'"
