--- a/apps/sudoku/src/app/multiplayer/room/room.component.html
+++ b/apps/sudoku/src/app/multiplayer/room/room.component.html
@@ -37,7 +37,7 @@
       <mat-spinner diameter="60" />
     </div>
     } @else {
-    <app-board
+    <lib-board
       [board]="board()"
       [initialBoard]="initialBoard()"
       [isInvalid]="status() === 'invalid'"
