--- a/libs/board/src/lib/board/board.component.html
+++ b/libs/board/src/lib/board/board.component.html
@@ -1,7 +1,7 @@
 <div class="sudoku-board">
   @for (row of rows; track row) {
     @for (col of cols; track col) {
-      <app-cell
+      <lib-cell
         [value]="board()[row][col]"
         [isPrefilled]="isPrefilled(row, col)"
         [isSelected]="isSelected()(row, col)"
